audio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: audio-storage
spec:
  selector:
    matchLabels:
      app: audio-storage
  serviceName: audio-storage
  replicas: 3
  template:
    metadata:
      labels:
        app: audio-storage
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: storage
          image: ubuntu
          command:
            - sleep
            - "infinity"
          volumeMounts:
            - name: storage-volume
              mountPath: /storage
      volumes:
      - name: config-map
        configMap:
          name: mysql
  volumeClaimTemplates:
    - metadata:
        name: storage-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
